--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "@react-three/csg": "^4.0.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
+    "@react-three/postprocessing": "^3.0.4",
+    "@types/three": "^0.181.0",
+    "framer-motion": "^12.23.25",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.15",
     "next": "16.0.6",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-error-boundary": "^6.0.0",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@types/node": "^20",
